First iteration of gRPC handling.